--- a/templates/pages/all-users-interface/club-profile.html
+++ b/templates/pages/all-users-interface/club-profile.html
@@ -39,9 +39,11 @@
             <button onclick="editClubForm.submit()" class="yes-btn" type="submit">Yes</button>
         </div>
     </div>
+    
     <div class="edit-clubProfile-form">
         <i onclick="hideEditClubForm()" class="fa-solid fa-xmark" id="x-mark"></i>
-        <form class="edit-club-form" action="" method="POST" enctype="multipart/form-data">
+        
+        <form class="edit-club-form" action="{% url 'clubProfile' pk=club.pk %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <div class="edit-club-form-place">
@@ -84,18 +86,18 @@
            <div class="club-achievments">
             <h4>Club's Achievments <i class="fa-solid fa-medal"></i></h4>
             <ul>
-                <li id="club-achievment1-data">club's achievments 1</li>
-                <li id="club-achievment2-data">club's achievments 2</li>
-                <li id="club-achievment3-data">club's achievments 3</li>
-                <li id="club-achievment4-data">club's achievments 4</li>
-                <li id="club-achievment5-data">club's achievments 5</li>
+                <li id="club-achievment1-data">{{club.club_achievement1}}</li>
+                <li id="club-achievment2-data">{{club.club_achievement2}}</li>
+                <li id="club-achievment3-data">{{club.club_achievement3}}</li>
+                <li id="club-achievment4-data">{{club.club_achievement4}}</li>
+                <li id="club-achievment5-data">{{club.club_achievement5}}</li>
             </ul>
             </div>
             <div class="club-management">
 
                 <p><i class="fa-solid fa-user"></i> <strong>Club Manager: </strong><span id="club-manager-data">{{club.clubmanager}}</span></p>
                 <p><i class="fa-solid fa-user"></i> <strong>Club Vice Manager: </strong><span id="vice-manager-data">{{club.clubvicemanager}}</span></p>
-                <p><i class="fa-solid fa-user-group"></i> <strong>Number Of Members: </strong><span id="num-of-members-data">75</span></p>
+                <p><i class="fa-solid fa-user-group"></i> <strong>Number Of Members: </strong><span id="num-of-members-data">{{club.number_of_members}}</span></p>
                 <p><i class="fa-solid fa-phone"></i> <strong>Phone Number 1: </strong><span id="phone1-data">{{club.phonenumber1}}</span></p>
                 <p><i class="fa-solid fa-phone"></i> <strong>Phone Number 2: </strong><span id="phone2-data">{{club.phonenumber2}}</span></p>
                 <p><i class="fa-solid fa-envelope"></i> <strong>Email: </strong><span id="club-email-data">{{club.email}}</span></p>
@@ -115,6 +117,7 @@
         </div>
         
     </div>
+    
     <div class="club-events">
       <div class="search-event-input">
         <div class="club-events-title">Club's Event Activities</div>
