--- a/templates/pages/all-users-interface/event-page.html
+++ b/templates/pages/all-users-interface/event-page.html
@@ -62,9 +62,83 @@
         <form class="edit-activity-form" action="" method="post" id="edit-event-activity-form" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="edit-activity-form-place">
-                <!-- The edit activity Form goes here(script.js line 360) -->
+                <i onclick="hideEditActivityForm()" class="fa-solid fa-xmark" id="edit-activity-x-mark"></i>
+                <div class="input-container justify-content-center gap-2">
+                    <div class="input-wrapper">
+                        <label for="e-a-cm-name">Club Manager Name:</label>
+                    <input class="input-field" type="text" name="edit_clubmanager" id="e-a-cm-name" placeholder="e.g Nouhad El Hallab" value="${activityManagerData.textContent}" required>
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="e-a-cvm-name">Club Vice Manager Name:</label>
+                    <input class="input-field" type="text" name="edit_clubvicemanager" id="e-a-cvm-name" placeholder="e.g Mohammad Aburahma" value="${activityViceData.textContent}" required>
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="e-a-c-name">Club Name:</label>
+                    <input class="input-field" type="text" name="edit_clubname" id="e-a-c-name" placeholder="e.g Paddle Pros" value="${activityClubNameData.textContent}" required>
+                    </div>
+                </div>
+            
+                <div class="input-container justify-content-center gap-2">
+                    <div class="input-wrapper">
+                        <label for="e-a-e-email">Email:</label>
+                    <input class="input-field activity-email-input" type="email" name="edit_email" id="e-a-e-email" placeholder="Email"value="${activityEmailData.textContent}" required>
+                    <strong class="email-error">Invalid Email</strong>
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="e-a-e-title">Event Title:</label>
+                    <input class="input-field event-title-input" type="text" name="edit_eventtitle" id="e-a-e-title" placeholder="Event Title" value="${activityTitleData.textContent}" required>
+                    </div>
+                    <div class="input-wrapper set-top">
+                        <label for="e-a-s-categories">Select a category:</label>
+                    <select class="event-category-input" name="edit_categories" id="e-a-s-categories">
+                        <option value="${activityCategoryData.textContent}">${activityCategoryData.textContent}</option>
+                        <option value="sport">Sport</option>
+                        <option value="gaming">Gaming</option>
+                        <option value="technology">Technology</option>
+                        <option value="society">Society</option>
+                        <option value="programming">Programming</option>
+                        <option value="art">Art</option>
+                    </select>
+                    </div>
+                </div>
+                <h6>Event Activity Image:</h6>
+                <div class="image-upload-container">
+                    <label for="e-a-file-upload" class="custom-file-upload">
+                    <i class="fas fa-cloud-upload-alt"></i> Choose File
+                </label>
+                <input class="event-file-upload-input" id="e-a-file-upload" name="edit_event_image" type="file" onchange="displayFiles(this)" required multiple />
+                </div>
+                <div class="event-file-list" id="e-a-file-list"></div>
+                <strong class="image-error">You should set an image for your event</strong>
+            
+                <div class="input-container justify-content-center gap-2 mt-5">
+                    <div class="input-wrapper">
+                        <label for="e-a-e-date">Event Date:</label>
+                    <input class="input-field" type="date" name="edit_date" id="e-a-e-date" required>
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="a-e-time">Event Time:</label>
+                    <input class="input-field" type="time" name="edit_time" id="e-a-e-time" required>
+                    </div>
+                    <div class="input-wrapper">
+                        <label for="a-e-location">Location:</label>
+                    <input class="input-field" type="text" name="edit_location" id="e-a-e-location" placeholder="e.g Uskudar Univer..." value="${activityLocationData.textContent}" required>
+                    </div>
+                    <div class="input-wrapper mt-lg-4">
+                        <label for="a-p-number">Phone Number:</label>
+                    <input class="input-field event-phone-input" type="text" name="edit_phonenumber" id="e-a-p-number" placeholder="e.g +90 (512) 345 678 9" value="${activityPhoneData.textContent}" required>
+                    <strong class="phone-error">Invalid Number</strong>
+                    </div>
+                </div>
+                <h6>Event Description:</h6>
+                <div class="description-container">
+                    <textarea class="input-field event-description-input" name="edit_description" id="e-a-e-description" placeholder="e.g The goal of this event..." required>${activityDescData.textContent}</textarea>
+                    <strong class="description-error">The Description should be between 300-4000 letter</strong>
+                </div>
+                <button onclick="checkEventFormAndConfirm()" type="button" class="send-request-btn align-self-center">Submit Request</button>
+                
             </div>
-         
+        </form>
     </div>
     
     <div class="event-activity-details-container">
