--- a/templates/pages/club-manager-interface/manager-notifications.html
+++ b/templates/pages/club-manager-interface/manager-notifications.html
@@ -22,41 +22,52 @@
     </div>
     <div class="manager-notif-container">
         {% for act in activities %}
-        {% if act.approved %}
-       <div class="notification notification-accepted">
-        <i class="fa-solid fa-check"></i>
-        Your Event Activity ( {{act.eventtitle}} ) Request Is Accepted By The SKS Admin
-       </div>
-       {% endif %}   
-       {% endfor %}
-       {% for post in posts %}
-       {% if post.approved %}
-      <div class="notification notification-accepted">
-       <i class="fa-solid fa-check"></i>
-       Your Event Post ( {{post.eventtitle}} ) Request Is Accepted By The SKS Admin
-      </div>
-      {% endif %}   
-      {% endfor %}
-       <div class="notification notification-rejected">
-        <i class="fa-solid fa-xmark"></i>
-        Your Event Activity Request Is Rejected By The SKS Admin
-        <button class="why-rejected">See Why</button>
-        <p class ="purpose-of-rejection">
-            The decision to reject an event hinges on several critical factors. Primarily, it must align with organizational values and goals.
-             If the event contradicts these principles or poses a threat to safety, it warrants rejection. Additionally, if the content lacks
-              relevance or fails to offer meaningful benefits to attendees, rejection becomes necessary to uphold standards of quality and purpose.chjbfdjhbshjvjhbcjhebcjheb ejhbcehjbcejhbchjebc dfhjbcjhbchjsbchjdsbc scdhjbcsdhjbcjhsbcjhdsbchjsbdchjsbdchjbdshcjbsdhjcb csjhbcsjhbchjfsbchjsbcjhsbchjsbcjhsbcjhsbc csjhbcsjhbcjhsdbcjhsbchjdsbcjhdsbcjhsdbcjhs cshjbcjhsfbcjhsfbcjhsbcjhbshjcbshjcb sdjhcbshjbcshjbcsjhbchsjbcjhsbchjsb csjhbchjsbchjsbcjhsbcjhsdbcjhdsbc cdhjsbcsjbcjsbcjsbhjcbsdbc cdsjhbcdsjhbchsjbcjhsbchjsbcjhsdb dchjsdbcjhbdschjdbscjhbshjcbshbc csjhdbcsjhdbchjsbchjsbcjhsbcjhbds cjhdsbchjsbcjnckjfsnjfnjvbdf vfdjhbvjhdfbvhjdfbvhdbhvbdfjhvbdv djhfbvfjhdbvhjdbvjhdbvhjdbhvdbv dfjhvbdfjhvbdjhbvjhdbvhjdbvhjdbvjhdbvhjdbvhjdbhvjbdhvbdfhjv fdjhvbdfjhbjhdfbjhfdbjhbfhjvbfdhj vfdjhbvhjfdbvjd vhfdjbvhfdjbvd vjhfdbvhjdfbvjhdv fdvbfdjhbvjhdbvd vjhdbvhjdbvjhfdbv dfjhvbdjhbvdjhbv vdjhbvhjdbvhjfdbv fdjhvbdjhvbdjhfbv vjhdbvjhdfbvhjdfbvhjdbfvhjfdbvhjbdhjvbdh vdjhbvhdjbvhjdbvjhdbvhjdbvhjbdhvbdfhvbdhjb
-            </p>
-       </div>
-       <div class="notification notification-rejected">
-        <i class="fa-solid fa-xmark"></i>
-        Your Event Activity Request Is Rejected By The SKS Admin
-        <button class="why-rejected">See Why</button>
-        <p class ="purpose-of-rejection">
-            The Location You chose isn't available on Monday 24 Apr
-            </p>
-       </div>
-       
+            {% if act.approved %}
+                <div class="notification notification-accepted">
+                    <i class="fa-solid fa-check"></i>
+                    Your Event Activity ({{ act.eventtitle }}) Request Is Accepted By The SKS Admin
+                </div>
+            {% endif %}
+            {% if act.rejected %}
+                <div class="notification notification-rejected">
+                    <i class="fa-solid fa-xmark"></i>
+                    Your Event Activity ({{ act.eventtitle }}) Request Is Rejected By The SKS Admin
+                    <button class="why-rejected">See Why</button>
+                    <p class="purpose-of-rejection">
+                        {% for reason in act.rejection_reason.all %}
+                            <!-- Display rejection reason if available -->
+                            Reason: {{ reason.reason }}
+                        {% endfor %}
+
+                    </p>
+                </div>
+            {% endif %}
+        {% endfor %}
+    
+        {% for post in posts %}
+            {% if post.approved %}
+                <div class="notification notification-accepted">
+                    <i class="fa-solid fa-check"></i>
+                    Your Event Post ({{ post.eventtitle }}) Request Is Accepted By The SKS Admin
+                </div>
+            {% endif %}   
+    
+            {% if post.rejected %}
+                <div class="notification notification-rejected">
+                    <i class="fa-solid fa-xmark"></i>
+                    Your Event Post ({{ post.eventtitle }}) Request Is Rejected By The SKS Admin
+                    <button class="why-rejected">See Why</button>
+                    <p class="purpose-of-rejection">
+                        {% for reason in post.rejection_reason.all %}
+                            <!-- Display rejection reason if available -->
+                            Reason: {{ reason.reason }}
+                        {% endfor %}
+                    </p>
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
+    
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
