--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -25,6 +25,7 @@
         <li class="nav-item ps-lg-1 pe-lg-1 ps-2 pe-2">
           <a id="my-list" class="nav-link to-activate" href="{% url 'myList' %}">My List</a>
         </li>
+        {% if request.user.is_authenticated and request.user.is_superuser and not request.user.is_staff %}
             <div class="dropdown">
                 <li class="nav-link create-button dropdown-toggle to-activate" type="button" id="create" data-bs-toggle="dropdown" aria-expanded="false">
                     Create
@@ -34,6 +35,7 @@
                     <li><a class="dropdown-item" href="{% url 'eventPostForm' %}">Event Post</a></li>
                 </ul>
             </div>
+        {% endif %}
 
 
 
@@ -48,14 +50,14 @@
                 </a>
             </div>
        {% endif %}
-       
+       {% if request.user.is_authenticated and request.user.is_superuser and not request.user.is_staff %}
        <div class="reg-buttons flex-column align-items-center gap-4 gap-lg-2 flex-lg-row">
         <a href="{% url 'managerNotifications' %}" id="manager-notifications">
           <div class="notifications-container me-2">
           <i class="fa-solid fa-bell"></i>
           <div class="notif-div"></div>
       </div>
-
+      {% endif %}
       </a>
         <div class="profile-container d-lg-flex align-items-lg-center gap-1">
         <div class="profile-letter">N</div>
